# PEGParser

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  calculator.cpp  calculator_visitor.cpp  type_filter.cpp
.github/workflows/: examples.yml  install.yml  macos.yml  style.yml  ubuntu.yml  windows.yml
bundled/include/lars/: iterators.h
cmake/: LarsParserConfig.cmake.in  get_lhc.cmake
cmake/Hunter/: config.cmake
dependencies/LHC/: CMakeLists.txt
example/: CMakeLists.txt  calculator.cpp  calculator_sequental.cpp  json_parser.cpp  python_indentation.cpp  test.cpp  type_checker.cpp
examples/: CMakeLists.txt  calculator.cpp  calculator_sequental.cpp  calculator_visitor.cpp  json_parser.cpp  python_indentation.cpp  type_checker.cpp  type_filter.cpp
glue/: CMakeLists.txt
glue/include/peg_parser/: glue.h
glue/source/: glue.cpp
include/lars/: CMakeLists.txt  grammar.h  interpreter.h  new_parser.h  parser.h  parser_expression.h  parser_generator.h  parsing_expression_grammar.h  peg.h
include/lars/parser/: extension.h  generator.h  glue.h  grammar.h  interpreter.h  parser.h  peg.h
include/peg_parser/: generator.h  grammar.h  interpreter.h  parser.h  peg.h  presets.h
lars/: iterators.h  packrat_parser.h  parsing_expression_grammar.h
parser/: expression.h  graph.h  hashers.h  iterators.h  parser.h  parsing_expression_grammar.h
source/: extension.cpp  glue.cpp  grammar.cpp  interpreter.cpp  parser.cpp  parser_generator.cpp  peg.cpp  presets.cpp
test/: CMakeLists.txt
test/source/: example.cpp  glue.cpp  parser.cpp
tests/: CMakeLists.txt  extension.cpp  glue.cpp  parser.cpp
tests/catch2/: CMakeLists.txt
tests/cmake/: get_catch2.cmake
